<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.mindspice</groupId>
    <artifactId>jchia-rpc-library</artifactId>
    <version>0.1.0</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>



<!--    <plugins>-->
    <!--            <plugin>-->
    <!--                <groupId>org.jetbrains.kotlin</groupId>-->
    <!--                <artifactId>kotlin-maven-plugin</artifactId>-->
    <!--                <version>1.8.10</version>-->
    <!--                <executions>-->
    <!--                    <execution>-->
    <!--                        <id>compile</id>-->
    <!--                        <goals>-->
    <!--                            <goal>compile</goal>-->
    <!--                        </goals>-->
    <!--                    </execution>-->
    <!--                    <execution>-->
    <!--                        <id>test-compile</id>-->
    <!--                        <goals>-->
    <!--                            <goal>test-compile</goal>-->
    <!--                        </goals>-->
    <!--                    </execution>-->
    <!--                </executions>-->
    <!--                <configuration>-->
    <!--                    <jvmTarget>17</jvmTarget>-->
    <!--                </configuration>-->
    <!--            </plugin>-->

    <dependencies>


        <!-- Needed for CertPairStore and loading self-signed .crt/.key pairs -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk15on</artifactId>
            <version>1.70</version>
        </dependency>

        <!-- Needed if using the internal Api classes -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.14.2</version>
        </dependency>

        <!-- Needed for loading config via .yaml -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.13.0</version>
        </dependency>

        <!-- Needed for making http request via RPCClient, and for the Api classes -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>org.jetbrains.kotlin</groupId>-->
        <!--            <artifactId>kotlin-stdlib</artifactId>-->
        <!--            <version>1.8.10</version>-->
        <!--        </dependency>-->

        <!-- for future unit test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.2</version>
            <scope>test</scope>
        </dependency>

        <!-- @Nullable annotations -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>annotations</artifactId>
            <version>3.0.1</version>
        </dependency>

    </dependencies>


</project>